закончил с РР главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
         <div class="main-nav__content main-nav__content--closed main-nav__content--nojs">
           <div class="main-nav__header">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+              <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg" width="146" height="40">
               <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
               <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
             </picture>
@@ -45,7 +45,7 @@
         </picture>
         <div class="get-app__content">
           <button class="get-app__banner" type="button">Скачать приложение</button>
-          <p class="get-app__slogan">Взгляните на жизнь иначе</p>
+          <p class="get-app__slogan">Взгляните на жизнь иначе!</p>
           <ul class="get-app__list appstore-list">
             <li class="appstore-list__image">
               <a href="#"><img src="img/logo-apple.svg" width="46" height="57" alt="Лого Эппл"></a>
@@ -100,9 +100,9 @@
               <span class="advanteges__clock-time">24</span>
             </div>
             <div class="advanteges__duration-wrapper">
-              <h3 class="advanteges__time-effect">Эффект<br> на 24 часа</h3>
+              <h3 class="advanteges__time-effect">Эффект<br> на 24 часа!</h3>
               <p class="advanteges__research">Британские ученые провели исследования
-                и доказали, что положительный эффект<br> от использования приложения длится целые сутки!
+                и доказали,<br> что положительный эффект<br> от использования приложения длится целые сутки!
               </p>
               <a class="advanteges__more" href="#">Узнать больше об исследовании</a>
             </div>
@@ -157,9 +157,10 @@
               </li>
               <li class="packages__header">
                 <span class="packages__hit">хит</span>
-                <svg class="packages__mark" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74px" height="73px" viewBox="0 0 74 73" enable-background="new 0 0 74 73" xml:space="preserve">
-                  <polygon fill="#D22856" points="31,0 0,30.581 0,73 74,0 "/>
-                </svg>
+                <picture>
+                  <source media="(min-width: 660px)" srcset="img/bg-hit-tablet.svg 1x">
+                  <img class="packages__mark" src="img/bg-hit.svg" width="74" height="73" alt="Демонстрация приложения">
+                </picture>
                 <p class="packages__name">Стандарт</p>
                 <p class="packages__price">3,99 USD</p>
               </li>
@@ -269,7 +270,10 @@
     </main>
     <footer class="page-footer">
       <div class="container page-footer__content page-footer__content--index">
-        <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
+          <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg" width="146" height="40" alt="Логотип приложения Пинк">
+        </picture>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a class="social__link social__link--tweeter" href="№">
