--- a/source/index.html
+++ b/source/index.html
@@ -38,10 +38,10 @@
         </div>
       </nav>
       <section class="get-app container">
-        <picture>
+        <picture class="get-app__image">
           <source media="(min-width: 1200px)" srcset="img/iphone-hand-desktop@1x.png 1x, img/iphone-hand-desktop@2x.png 2x">
           <source media="(min-width: 660px)" srcset="img/iphone-hand-tablet@1x.png 1x, img/iphone-hand-tablet@2x.png 2x">
-          <img class="get-app__image" src="img/iphone-hand-mobile@1x.png" srcset="img/iphone-hand-mobile@2x.png 2x"  width="258" height="286" alt="Демонстрация приложения">
+          <img src="img/iphone-hand-mobile@1x.png" srcset="img/iphone-hand-mobile@2x.png 2x"  width="258" height="286" alt="Демонстрация приложения">
         </picture>
         <div class="get-app__content">
           <button class="get-app__banner" type="button">Скачать приложение</button>
